feat: Added brokkw and brokkw.bat to run shadow jar with options